acrescentado um segundo link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <h1>liks logo abaixo</h1>
     <p></p>
     <p>links para as leis:</p>
+
     <a href="http://www.planalto.gov.br/ccivil_03/constituicao/constituicao.htm"> ACESSO A CONSTITUIÇÃO FEDERAL\88</a>
+    <P></P>
+
+    <a href="http://www.planalto.gov.br/ccivil_03/decreto-lei/del2848compilado.htm">ACESSO AO CODIGO PENAL BRASILEIRO</a>
     
+
+
 </body>
 </html>
