acrescentado um terceiro link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <P></P>
 
     <a href="http://www.planalto.gov.br/ccivil_03/decreto-lei/del2848compilado.htm">ACESSO AO CODIGO PENAL BRASILEIRO</a>
-    
+    <p></p>
+
+    <a href="http://www.planalto.gov.br/ccivil_03/leis/2002/l10406compilada.htm">ACESSO AO CODIGO CIVIL BRASILEIRO</a>
 
 
 </body>
